WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
257391
WKWebViewConfiguration._delaysWebProcessLaunchUntilFirstLoad SPI is not working
https://bugs.webkit.org/show_bug.cgi?id=257391
Summary
WKWebViewConfiguration._delaysWebProcessLaunchUntilFirstLoad SPI is not working
Chris Dumez
Reported
2023-05-26 13:48:19 PDT
m_delaysWebProcessLaunchUntilFirstLoad flag doesn't get copied by PageConfiguration::copy().
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-05-26 14:16:52 PDT
<
rdar://problem/109904914
>
Chris Dumez
Comment 2
2023-05-26 14:20:16 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14403
EWS
Comment 3
2023-05-26 16:18:10 PDT
Committed
264609@main
(875ce9b49245): <
https://commits.webkit.org/264609@main
> Reviewed commits have been landed. Closing PR #14403 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug