WKWebViewConfiguration._delaysWebProcessLaunchUntilFirstLoad SPI is not working https://bugs.webkit.org/show_bug.cgi?id=257391 rdar://109904914

Reviewed by Ben Nham.

The WKWebViewConfiguration._delaysWebProcessLaunchUntilFirstLoad SPI was not working
because we were failing to copy the flag over in API::PageConfiguration::copy().

The unit tests didn't catch it because they weren't waiting long enough to see if
a process had launched. I am fixing this too.

I am also adding more logging to help with debugging.

* Source/WebKit/UIProcess/API/APIPageConfiguration.cpp:
(API::PageConfiguration::copy const):
(API::PageConfiguration::setDelaysWebProcessLaunchUntilFirstLoad):
(API::PageConfiguration::delaysWebProcessLaunchUntilFirstLoad const):
* Source/WebKit/UIProcess/API/APIPageConfiguration.h:
(API::PageConfiguration::setDelaysWebProcessLaunchUntilFirstLoad): Deleted.
* Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:

Canonical link: https://commits.webkit.org/264609@main